pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart.strong.expect
library test;
//
// Problems in library:
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:13:62: Error: A value of type 'String Function(String)' can't be assigned to a variable of type 'String Function(int)'.
//     Function2<int, String> l2 = /*error:INVALID_ASSIGNMENT*/ (String x) =>
//                                                              ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:15:73: Error: A value of type 'int' can't be returned from a function with return type 'String'.
//     Function2<int, String> l3 = /*error:INVALID_ASSIGNMENT*/ (int x) => 3;
//                                                                         ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:17:47: Error: A value of type 'int' can't be returned from a function with return type 'String'.
//       return /*error:RETURN_OF_INVALID_TYPE*/ 3;
//                                               ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:24:74: Error: A value of type 'int' can't be returned from a function with return type 'String'.
//     l2 = /*info:INFERRED_TYPE_CLOSURE, error:INVALID_ASSIGNMENT*/ (x) => 3;
//                                                                          ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:26:47: Error: A value of type 'int' can't be returned from a function with return type 'String'.
//       return /*error:RETURN_OF_INVALID_TYPE*/ 3;
//                                               ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:29:47: Error: A value of type 'int' can't be returned from a function with return type 'String'.
//       return /*error:RETURN_OF_INVALID_TYPE*/ x;
//                                               ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:35:68: Error: A value of type 'List<String> Function(String)' can't be assigned to a variable of type 'List<String> Function(int)'.
//  - 'List' is from 'dart:core'.
//     Function2<int, List<String>> l2 = /*error:INVALID_ASSIGNMENT*/ (String x) =>
//                                                                    ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:38:50: Error: A value of type 'int' can't be assigned to a variable of type 'String'.
//       /*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ 3,
//                                                  ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:41:58: Error: A value of type 'int' can't be assigned to a variable of type 'String'.
//       return [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ 3];
//                                                          ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:49:40: Error: A value of type 'int' can't be returned from a function with return type 'String'.
//     Function2<int, String> l2 = (x) => x;
//                                        ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:51:61: Error: The method 'substring' isn't defined for the type 'int'.
// Try correcting the name to the name of an existing method, or defining a method named 'substring'.
//         (x) => /*info:DYNAMIC_CAST, info:DYNAMIC_INVOKE*/ x.substring(3);
//                                                             ^^^^^^^^^
//
import self as self;
import "dart:core" as core;

typedef Function2<contravariant S extends core::Object? = dynamic, T extends core::Object? = dynamic> = (S%) → T%;
static method test() → void {
  {
    (core::int) → core::String l0 = (core::int x) → Never => throw "";
    (core::int) → core::String l1 = (core::int x) → core::String => "hello";
    (core::int) → core::String l2 = invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:13:62: Error: A value of type 'String Function(String)' can't be assigned to a variable of type 'String Function(int)'.
    Function2<int, String> l2 = /*error:INVALID_ASSIGNMENT*/ (String x) =>
                                                             ^" in ((core::String x) → core::String => "hello") as{TypeError} (core::int) → core::String;
    (core::int) → core::String l3 = (core::int x) → core::String => invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:15:73: Error: A value of type 'int' can't be returned from a function with return type 'String'.
    Function2<int, String> l3 = /*error:INVALID_ASSIGNMENT*/ (int x) => 3;
                                                                        ^" in 3 as{TypeError} core::String;
    (core::int) → core::String l4 = (core::int x) → core::String {
      return invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:17:47: Error: A value of type 'int' can't be returned from a function with return type 'String'.
      return /*error:RETURN_OF_INVALID_TYPE*/ 3;
                                              ^" in 3 as{TypeError} core::String;
    };
  }
  {
    (core::int) → core::String l0 = (core::int x) → Never => throw "";
    (core::int) → core::String l1 = (core::int x) → core::String => "hello";
    (core::int) → core::String l2 = (core::int x) → core::String => invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:24:74: Error: A value of type 'int' can't be returned from a function with return type 'String'.
    l2 = /*info:INFERRED_TYPE_CLOSURE, error:INVALID_ASSIGNMENT*/ (x) => 3;
                                                                         ^" in 3 as{TypeError} core::String;
    (core::int) → core::String l3 = (core::int x) → core::String {
      return invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:26:47: Error: A value of type 'int' can't be returned from a function with return type 'String'.
      return /*error:RETURN_OF_INVALID_TYPE*/ 3;
                                              ^" in 3 as{TypeError} core::String;
    };
    (core::int) → core::String l4 = (core::int x) → core::String {
      return invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:29:47: Error: A value of type 'int' can't be returned from a function with return type 'String'.
      return /*error:RETURN_OF_INVALID_TYPE*/ x;
                                              ^" in x as{TypeError} core::String;
    };
  }
  {
    (core::int) → core::List<core::String> l0 = (core::int x) → Never => throw "";
    (core::int) → core::List<core::String> l1 = (core::int x) → core::List<core::String> => <core::String>["hello"];
    (core::int) → core::List<core::String> l2 = invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:35:68: Error: A value of type 'List<String> Function(String)' can't be assigned to a variable of type 'List<String> Function(int)'.
 - 'List' is from 'dart:core'.
    Function2<int, List<String>> l2 = /*error:INVALID_ASSIGNMENT*/ (String x) =>
                                                                   ^" in ((core::String x) → core::List<core::String> => <core::String>["hello"]) as{TypeError} (core::int) → core::List<core::String>;
    (core::int) → core::List<core::String> l3 = (core::int x) → core::List<core::String> => <core::String>[invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:38:50: Error: A value of type 'int' can't be assigned to a variable of type 'String'.
      /*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ 3,
                                                 ^" in 3 as{TypeError} core::String];
    (core::int) → core::List<core::String> l4 = (core::int x) → core::List<core::String> {
      return <core::String>[invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:41:58: Error: A value of type 'int' can't be assigned to a variable of type 'String'.
      return [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ 3];
                                                         ^" in 3 as{TypeError} core::String];
    };
  }
  {
    (core::int) → core::int l0 = (core::int x) → core::int => x;
    (core::int) → core::int l1 = (core::int x) → core::int => x.{core::num::+}(1){(core::num) → core::int};
    (core::int) → core::String l2 = (core::int x) → core::String => invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:49:40: Error: A value of type 'int' can't be returned from a function with return type 'String'.
    Function2<int, String> l2 = (x) => x;
                                       ^" in x as{TypeError} core::String;
    (core::int) → core::String l3 = (core::int x) → core::String => invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_expressions.dart:51:61: Error: The method 'substring' isn't defined for the type 'int'.
Try correcting the name to the name of an existing method, or defining a method named 'substring'.
        (x) => /*info:DYNAMIC_CAST, info:DYNAMIC_INVOKE*/ x.substring(3);
                                                            ^^^^^^^^^" in x{<unresolved>}.substring(3) as{TypeError,ForDynamic} core::String;
    (core::String) → core::String l4 = (core::String x) → core::String => x.{core::String::substring}(3){(core::int, [core::int?]) → core::String};
  }
}
static method main() → dynamic {}
